--- a/views/index.html
+++ b/views/index.html
@@ -2,28 +2,27 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/reset.css'/>
-    <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css'/>
+
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-    <header></header>
-    <aside class="col-md-4">
-        <menu>
-            <li><a href="#"><i class="fa fa-bars"></i><span>头部</span></a></li>
-            <li><a href="#"><i class="fa fa-bars"></i><span>导航</span></a></li>
-            <li><a href="#"><i class="fa fa-bars"></i><span>布局</span></a></li>
-            <li><a href="#"><i class="fa fa-bars"></i><span>布局</span></a></li>
-            <li><a href="#"><i class="fa fa-bars"></i><span>布局</span></a></li>
-        </menu>
-    </aside>
-    <article class="col-md-8">
-        qw
-    </article>
-</div>
+
+<header></header>
+<aside class="tpl-aside">
+    <ul class="tab-menu">
+        <li><a href="#"><i class="fa fa-bars"></i><span>头部</span></a></li>
+        <li><a href="#"><i class="fa fa-bars"></i><span>导航</span></a></li>
+        <li><a href="#"><i class="fa fa-bars"></i><span>布局</span></a></li>
+        <li><a href="#"><i class="fa fa-bars"></i><span>布局</span></a></li>
+        <li><a href="#"><i class="fa fa-bars"></i><span>布局</span></a></li>
+    </ul>
+
+</aside>
+<article class="tpl-content">
+</article>
 
 
 </body>
